--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,6 +103,9 @@
       "@cloudflare/workers-types",
       "@types/node"
     ],
+    "paths": {
+      "@/src/*": ["./src/*"],
+    }
   },
   "include": [
     "**/*.ts"
