--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "email": "velshome@gmail.com"
   },
   "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  },
+  "private": true,
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.cjs",
@@ -26,34 +24,36 @@
     "init": "./dist/cli/index.js"
   },
   "scripts": {
-    "prebuild": "./build-body-js-string.sh",
-    "dev:cli": "npx tsx --inspect src/cli/index.ts init test.com",
-    "build": "npm run prebuild && tsup src/index.ts --format cjs,esm --dts-resolve --clean --sourcemap --out-dir dist && npm run build:cli",
-    "build:cli": "tsup src/cli/index.ts --format esm --clean --out-dir dist/cli",
-    "release": "npm run build && changeset publish",
-    "lint": "echo Fix lint!"
+    "prebuild": "node ./src/prebuild.js",
+    "build": "pnpm run prebuild && tsup src/index.ts --format cjs,esm --dts-resolve --clean --sourcemap --out-dir dist",
+    "lint": "pnpm dlx eslint"
   },
   "dependencies": {
     "@inquirer/prompts": "^3.3.2",
     "chalk": "^5.3.0",
     "change-case-all": "^2.1.0",
     "commander": "^11.1.0",
-    "ejs": "^3.1.9",
+    "ejs": "^3.1.10",
+    "glob": "^11.0.0",
     "htmlrewriter": "^0.0.7",
     "is-valid-domain": "^0.1.6"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "@cloudflare/workers-types": "^4.20231218.0",
+    "@cloudflare/workers-types": "^4.20241106.0",
+    "@eslint/js": "^9.15.0",
     "@stylistic/eslint-plugin": "^1.5.4",
     "@types/node": "^20.11.6",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
+    "eslint": "^9.15.0",
     "eslint-plugin-import": "^2.29.1",
+    "globals": "^15.12.0",
     "prettier": "3.2.2",
     "tsc": "^2.0.4",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
-    "wrangler": "^3.0.0"
+    "typescript-eslint": "^8.14.0",
+    "wrangler": "^3.19.0"
   }
 }
