--- a/.gitignore
+++ b/.gitignore
@@ -94,7 +94,6 @@ web_modules/
 
 # dotenv environment variable files
 
-.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -174,3 +173,6 @@ dist
 .git
 /src/cli/
 /src/js/*.ts
+
+.env*
+.flaskenv*
