--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "prebuild": "node ./src/prebuild.js",
     "build": "pnpm run prebuild && tsup src/index.ts --format cjs,esm --dts-resolve --clean --sourcemap --out-dir dist",
-    "lint": "pnpm dlx eslint"
+    "lint": "pnpm dlx eslint",
+    "vault": "pnpm dlx dotenv-vault@latest local build"
   },
   "dependencies": {
     "@inquirer/prompts": "^3.3.2",
@@ -42,12 +43,8 @@
     "@changesets/cli": "^2.27.1",
     "@cloudflare/workers-types": "^4.20241106.0",
     "@eslint/js": "^9.15.0",
-    "@stylistic/eslint-plugin": "^1.5.4",
     "@types/node": "^20.11.6",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^9.15.0",
-    "eslint-plugin-import": "^2.29.1",
     "globals": "^15.12.0",
     "prettier": "3.2.2",
     "tsc": "^2.0.4",
