--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "scripts": {
     "prebuild": "node ./src/prebuild.js",
-    "build": "pnpm run prebuild && tsup src/index.ts --format cjs,esm --dts-resolve --clean --sourcemap --out-dir dist",
-    "lint": "pnpm dlx eslint",
-    "vault": "pnpm dlx dotenv-vault@latest local build"
+    "build": "npm run prebuild && tsup src/index.ts --format cjs,esm --dts-resolve --clean --sourcemap --out-dir dist",
+    "lint": "npx eslint",
+    "deploy": "npm run build && wrangler deploy"
   },
   "dependencies": {
     "@inquirer/prompts": "^3.3.2",
@@ -36,14 +36,14 @@
     "commander": "^11.1.0",
     "ejs": "^3.1.10",
     "glob": "^11.0.0",
-    "htmlrewriter": "^0.0.7",
-    "is-valid-domain": "^0.1.6"
+    "htmlrewriter": "^0.0.7"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.1",
+    "@changesets/cli": "^1.2.0",
     "@cloudflare/workers-types": "^4.20241106.0",
     "@eslint/js": "^9.15.0",
     "@types/node": "^20.11.6",
+    "cloudflare": "^3.5.0",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
     "prettier": "3.2.2",
